--- a/backend/auth-service/Cargo.toml
+++ b/backend/auth-service/Cargo.toml
@@ -9,5 +9,6 @@ chrono = "0.4.41"
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["cors"] }
