feat: add migrations

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -3,4 +3,5 @@ FROM base-image
 WORKDIR /app
 COPY --from=base-image /build/target/release/auth-service .
 
+LABEL org.opencontainers.image.source=https://github.com/BrewingBytes/BrewGet
 CMD [ "./auth-service" ]
