--- a/.github/workflows/backend-build-docker.yaml
+++ b/.github/workflows/backend-build-docker.yaml
@@ -41,23 +41,30 @@ jobs:
           run: |
             VERSION=$(grep '^version = ' ./auth-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
             echo "auth_version=$VERSION" >> "$GITHUB_OUTPUT"
-        - name: Build auth-service image
-          if: steps.changes.outputs.auth == 'true'
-          run: |
-              docker build -t auth-service auth-service
-              docker tag auth-service ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}
-              docker tag auth-service ghcr.io/brewingbytes/brewget-auth-service:latest
         - name: Log in to Docker Hub
           uses: docker/login-action@v3
           with:
             registry: ghcr.io
             username: ${{ github.actor }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push auth-service
+        - name: Build auth-service image
+          id: auth_service
           if: steps.changes.outputs.auth == 'true'
           run: |
-              docker push ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}
-              docker push ghcr.io/brewingbytes/brewget-auth-service:latest
+            if docker manifest inspect ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}; then
+              echo "Tag already exists."
+              echo "build=false" >> "$GITHUB_OUTPUT"
+            else
+              docker build -t auth-service auth-service
+              docker tag auth-service ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}
+              docker tag auth-service ghcr.io/brewingbytes/brewget-auth-service:latest
+              echo "build=true" >> "$GITHUB_OUTPUT"
+            fi
+        - name: Push auth-service
+          if: steps.changes.outputs.auth == 'true' && steps.auth_service.outputs.build == 'true'
+          run: |
+            docker push ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}
+            docker push ghcr.io/brewingbytes/brewget-auth-service:latest
 
           
           
