--- a/backend/email-service/Cargo.toml
+++ b/backend/email-service/Cargo.toml
@@ -2,5 +2,15 @@
 name = "email-service"
 version = "0.0.1"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
+dotenv = "0.15.0"
+lettre = "0.11.18"
+prost = "0.14.1"
+tokio = { version = "1.47.1", features = ["full"] }
+tonic = "0.14.1"
+tonic-prost = "0.14.1"
+
+[build-dependencies]
+tonic-prost-build = "0.14.1"
