--- a/backend/email-service/Cargo.toml
+++ b/backend/email-service/Cargo.toml
@@ -6,8 +6,10 @@ build = "build.rs"
 
 [dependencies]
 dotenv = "0.15.0"
-lettre = "0.11.18"
+handlebars = "6.3.2"
+lettre = { version = "0.11.18", features = ["builder"] }
 prost = "0.14.1"
+serde_json = "1.0.142"
 tokio = { version = "1.47.1", features = ["full"] }
 tonic = "0.14.1"
 tonic-prost = "0.14.1"
