--- a/.github/workflows/backend-build-docker.yml
+++ b/.github/workflows/backend-build-docker.yml
@@ -25,7 +25,7 @@ jobs:
             filters: |
               auth:
                 - 'backend/auth-service/Cargo.toml'
-              email
+              email:
                 - 'backend/email-service/Cargo.toml'
         - name: Cache
           uses: actions/cache@v4
@@ -35,6 +35,11 @@ jobs:
               ~/.cargo/git
               target
             key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        - name: Prerequisites
+          if: steps.changes.outputs.backend == 'true'
+          run: |
+            sudo apt update
+            sudo apt install protobuf-compiler
         - name: Build base-image
           run: docker build -t base-image .
         - name: Get services version
