--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,11 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Prerequisites
+        if: steps.changes.outputs.backend == 'true'
+        run: |
+          sudo apt update
+          sudo apt install protobuf-compiler
       - name: Clippy
         if: steps.changes.outputs.backend == 'true'
         run: cargo clippy --all-features --workspace -- -D warnings
@@ -65,6 +70,11 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Prerequisites
+        if: steps.changes.outputs.backend == 'true'
+        run: |
+          sudo apt update
+          sudo apt install protobuf-compiler
       - name: Test
         if: steps.changes.outputs.backend == 'true'
         run: cargo test
@@ -94,6 +104,11 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Prerequisites
+        if: steps.changes.outputs.backend == 'true'
+        run: |
+          sudo apt update
+          sudo apt install protobuf-compiler
       - name: Build
         if: steps.changes.outputs.backend == 'true'
         run: cargo build
