--- a/.github/workflows/backend-build-docker.yml
+++ b/.github/workflows/backend-build-docker.yml
@@ -25,6 +25,8 @@ jobs:
             filters: |
               auth:
                 - 'backend/auth-service/Cargo.toml'
+              email:
+                - 'backend/email-service/Cargo.toml'
         - name: Cache
           uses: actions/cache@v4
           with:
@@ -33,14 +35,20 @@ jobs:
               ~/.cargo/git
               target
             key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        - name: Prerequisites
+          if: steps.changes.outputs.backend == 'true'
+          run: |
+            sudo apt update
+            sudo apt install protobuf-compiler
         - name: Build base-image
           run: docker build -t base-image .
-        - name: Get auth-service version
-          if: steps.changes.outputs.auth == 'true'
+        - name: Get services version
           id: get_version
           run: |
             VERSION=$(grep '^version = ' ./auth-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
             echo "auth_version=$VERSION" >> "$GITHUB_OUTPUT"
+            VERSION=$(grep '^version = ' ./email-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
+            echo "email_version=$VERSION" >> "$GITHUB_OUTPUT"
         - name: Log in to Docker Hub
           uses: docker/login-action@v3
           with:
@@ -60,11 +68,29 @@ jobs:
               docker tag auth-service ghcr.io/brewingbytes/brewget-auth-service:latest
               echo "build=true" >> "$GITHUB_OUTPUT"
             fi
+        - name: Build email-service image
+          id: email_service
+          if: steps.changes.outputs.email == 'true'
+          run: |
+            if docker manifest inspect ghcr.io/brewingbytes/brewget-email-service:${{ steps.get_version.outputs.email_version }}; then
+              echo "Tag already exists."
+              echo "build=false" >> "$GITHUB_OUTPUT"
+            else
+              docker build -t email-service email-service
+              docker tag email-service ghcr.io/brewingbytes/brewget-email-service:${{ steps.get_version.outputs.email_version }}
+              docker tag email-service ghcr.io/brewingbytes/brewget-email-service:latest
+              echo "build=true" >> "$GITHUB_OUTPUT"
+            fi
         - name: Push auth-service
           if: steps.changes.outputs.auth == 'true' && steps.auth_service.outputs.build == 'true'
           run: |
             docker push ghcr.io/brewingbytes/brewget-auth-service:${{ steps.get_version.outputs.auth_version }}
             docker push ghcr.io/brewingbytes/brewget-auth-service:latest
+        - name: Push email-service
+          if: steps.changes.outputs.email == 'true' && steps.email_service.outputs.build == 'true'
+          run: |
+            docker push ghcr.io/brewingbytes/brewget-email-service:${{ steps.get_version.outputs.email_version }}
+            docker push ghcr.io/brewingbytes/brewget-email-service:latest
 
           
           
