--- a/backend/auth-service/Cargo.toml
+++ b/backend/auth-service/Cargo.toml
@@ -24,7 +24,7 @@ tokio = { version = "1.47.1", features = ["full"] }
 tonic = "0.14.1"
 tonic-prost = "0.14.1"
 tower-http = { version = "0.6.6", features = ["cors"] }
-uuid = { version = "1.18.0", features = ["serde"] }
+uuid = { version = "1.18.0", features = ["serde", "v4"] }
 
 [build-dependencies]
 tonic-prost-build = "0.14.1"
