--- a/backend/auth-service/Cargo.toml
+++ b/backend/auth-service/Cargo.toml
@@ -2,6 +2,7 @@
 name = "auth-service"
 version = "0.0.2"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
 argon2 = { version = "0.5.3", features = ["std"] }
@@ -17,7 +18,13 @@ diesel-async = { version = "0.6.1", features = [
 dotenv = "0.15.0"
 email_address = "0.2.9"
 jsonwebtoken = "9.3.1"
+prost = "0.14.1"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 tokio = { version = "1.47.1", features = ["full"] }
+tonic = "0.14.1"
+tonic-prost = "0.14.1"
 tower-http = { version = "0.6.6", features = ["cors"] }
-uuid = { version = "1.18.0", features = ["serde"] }
+uuid = { version = "1.18.0", features = ["serde", "v4"] }
+
+[build-dependencies]
+tonic-prost-build = "0.14.1"
