--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint .",
+    "format": "eslint . --fix"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "eslint-plugin-import": "^2.32.0",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "primevue": "^4.3.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
