--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "eslint-plugin-import": "^2.32.0",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.8",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.8",
+    "@tailwindcss/vite": "^4.1.13",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -33,6 +36,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.3.3",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.6.3",
     "unplugin-vue-components": "^29.0.0",
     "vite": "^6.0.5",
