feat: improve docker image size

--- a/backend/email-service/Dockerfile
+++ b/backend/email-service/Dockerfile
@@ -1,4 +1,10 @@
-FROM base-image
+# Runtime stage
+FROM debian:bookworm-slim
+
+# Install only runtime dependencies
+RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY --from=base-image /build/target/release/email-service .
