--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,16 +11,16 @@ RUN apt-get update && apt-get install -y \
 COPY Cargo.toml Cargo.lock ./
 
 COPY auth-service/Cargo.toml auth-service/
+COPY auth-service/build.rs auth-service/
 COPY email-service/Cargo.toml email-service/
+COPY email-service/build.rs email-service/
 
 COPY proto/ proto/
 
 # Create dummy source files for dependency caching
 RUN mkdir -p auth-service/src email-service/src \
     && echo "fn main() {}" > auth-service/src/main.rs \
-    && echo "fn main() {}" > auth-service/build.rs \
-    && echo "fn main() {}" > email-service/src/main.rs \
-    && echo "fn main() {}" > email-service/build.rs
+    && echo "fn main() {}" > email-service/src/main.rs
 
 # Build dependencies only
 RUN cargo build --release
