--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,21 +12,27 @@ RUN bun install
 # Copy source code
 COPY . .
 
+# Set build environment
+ENV NODE_ENV=production
+
 # Build the application
 RUN bun run build-only
 
-# Production stage
-FROM nginx:alpine
+# Production stage - using lightweight static server
+FROM busybox:1.36
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
+# Install basic HTTP server
+RUN adduser -D static
+USER static
+WORKDIR /home/static
 
 # Copy built assets from builder
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist .
 
 # Expose port
 EXPOSE 80
 
-# Start nginx
+# Start simple HTTP server
+CMD ["busybox", "httpd", "-f", "-v", "-p", "80", "-h", "/home/static"]
+
 LABEL org.opencontainers.image.source=https://github.com/BrewingBytes/BrewGet
-CMD ["nginx", "-g", "daemon off;"]
