feat: add settings service, rust workflow and build workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,7 @@ jobs:
               - '.github/workflows/rust.yml'
               - 'backend/auth-service/**'
               - 'backend/email-service/**'
+              - 'backend/settings-service/**'
               - 'backend/proto/**'
               - 'backend/Cargo.lock'
               - 'backend/Cargo'
@@ -67,6 +68,7 @@ jobs:
               - '.github/workflows/rust.yml'
               - 'backend/auth-service/**'
               - 'backend/email-service/**'
+              - 'backend/settings-service/**'
               - 'backend/proto/**'
               - 'backend/Cargo.lock'
               - 'backend/Cargo'
@@ -106,6 +108,7 @@ jobs:
               - '.github/workflows/rust.yml'
               - 'backend/auth-service/**'
               - 'backend/email-service/**'
+              - 'backend/settings-service/**'
               - 'backend/proto/**'
               - 'backend/Cargo.lock'
               - 'backend/Cargo'
