--- a/.github/workflows/backend-build-docker.yml
+++ b/.github/workflows/backend-build-docker.yml
@@ -27,10 +27,12 @@ jobs:
                 - 'backend/auth-service/Cargo.toml'
               email:
                 - 'backend/email-service/Cargo.toml'
+              settings:
+                - 'backend/settings-service/Cargo.toml'
               base-image:
                 - 'backend/Dockerfile'
         - name: Cache
-          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.base-image == 'true'
+          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.settings == 'true' || steps.changes.outputs.base-image == 'true'
           uses: actions/cache@v4
           with:
             path: |
@@ -39,18 +41,20 @@ jobs:
               target
             key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         - name: Build base-image
-          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.base-image == 'true'
+          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.settings == 'true' || steps.changes.outputs.base-image == 'true'
           run: docker build -t base-image .
         - name: Get services version
-          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.base-image == 'true'
+          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.settings == 'true' || steps.changes.outputs.base-image == 'true'
           id: get_version
           run: |
             VERSION=$(grep '^version = ' ./auth-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
             echo "auth_version=$VERSION" >> "$GITHUB_OUTPUT"
             VERSION=$(grep '^version = ' ./email-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
             echo "email_version=$VERSION" >> "$GITHUB_OUTPUT"
+            VERSION=$(grep '^version = ' ./settings-service/Cargo.toml | sed -n 's/^version = "\(.*\)"/\1/p')
+            echo "settings_version=$VERSION" >> "$GITHUB_OUTPUT"
         - name: Log in to Docker Hub
-          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.base-image == 'true'
+          if: steps.changes.outputs.auth == 'true' || steps.changes.outputs.email == 'true' || steps.changes.outputs.settings == 'true' || steps.changes.outputs.base-image == 'true'
           uses: docker/login-action@v3
           with:
             registry: ghcr.io
@@ -82,6 +86,19 @@ jobs:
               docker tag email-service ghcr.io/brewingbytes/brewget-email-service:latest
               echo "build=true" >> "$GITHUB_OUTPUT"
             fi
+        - name: Build settings-service image
+          id: settings_service
+          if: steps.changes.outputs.settings == 'true' || steps.changes.outputs.base-image == 'true'
+          run: |
+            if docker manifest inspect ghcr.io/brewingbytes/brewget-settings-service:${{ steps.get_version.outputs.settings_version }}; then
+              echo "Tag already exists."
+              echo "build=false" >> "$GITHUB_OUTPUT"
+            else
+              docker build -t settings-service settings-service
+              docker tag settings-service ghcr.io/brewingbytes/brewget-settings-service:${{ steps.get_version.outputs.settings_version }}
+              docker tag settings-service ghcr.io/brewingbytes/brewget-settings-service:latest
+              echo "build=true" >> "$GITHUB_OUTPUT"
+            fi
         - name: Push auth-service
           if: steps.auth_service.outputs.build == 'true'
           run: |
@@ -92,3 +109,8 @@ jobs:
           run: |
             docker push ghcr.io/brewingbytes/brewget-email-service:${{ steps.get_version.outputs.email_version }}
             docker push ghcr.io/brewingbytes/brewget-email-service:latest
+        - name: Push settings-service
+          if: steps.settings_service.outputs.build == 'true'
+          run: |
+            docker push ghcr.io/brewingbytes/brewget-settings-service:${{ steps.get_version.outputs.settings_version }}
+            docker push ghcr.io/brewingbytes/brewget-settings-service:latest
