--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,13 +14,15 @@ COPY auth-service/Cargo.toml auth-service/
 COPY auth-service/build.rs auth-service/
 COPY email-service/Cargo.toml email-service/
 COPY email-service/build.rs email-service/
+COPY settings-service/Cargo.toml settings-service/
 
 COPY proto/ proto/
 
 # Create dummy source files for dependency caching
-RUN mkdir -p auth-service/src email-service/src \
+RUN mkdir -p auth-service/src email-service/src settings-service/src \
     && echo "fn main() {}" > auth-service/src/main.rs \
-    && echo "fn main() {}" > email-service/src/main.rs
+    && echo "fn main() {}" > email-service/src/main.rs \
+    && echo "fn main() {}" > settings-service/src/main.rs
 
 # Build dependencies only
 RUN cargo build --release
