--- a/k8s/06-auth-service.yaml
+++ b/k8s/06-auth-service.yaml
@@ -67,6 +67,8 @@ spec:
           limits:
             memory: "64Mi"
             cpu: "100m"
+      imagePullSecrets:
+      - name: ghcr-login-secret
       containers:
       - name: auth-service
         image: ghcr.io/brewingbytes/brewget-auth-service:0.0.8
