--- a/.env.example
+++ b/.env.example
@@ -22,10 +22,10 @@ CORS_URL=http://localhost:5173
 
 # SMTP Configuration (using MailHog for local development)
 SMTP_EMAIL=noreply@localhost
-SMTP_NAME=BrewGet Dev
-SMTP_RELAY=localhost:1025
-SMTP_USERNAME=
-SMTP_PASSWORD=
+SMTP_NAME=brewget
+SMTP_RELAY=smtp://localhost:1025
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
 
 # Turnstile Captcha Configuration
 # Use test key for local development
