--- a/backend/email-service/Cargo.toml
+++ b/backend/email-service/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.48.0", features = ["full"] }
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
 tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
