--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "prebuild": "node scripts/build-changelogs.mjs",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint .",
