--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,8 +6,12 @@ upstream auth_upstream {
     server auth-service:8000;
 }
 
+upstream email_upstream {
+    server email-service:8001;
+}
+
 upstream settings_upstream {
-    server settings-service:8001;
+    server settings-service:8002;
 }
 
 server {
@@ -26,6 +30,16 @@ server {
     # Auth Service API
     location /api/auth/ {
         proxy_pass http://auth_upstream/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Email Service API
+    location /api/email/ {
+        proxy_pass http://email_upstream/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
