--- a/k8s/03-configmaps.yaml
+++ b/k8s/03-configmaps.yaml
@@ -34,6 +34,10 @@ data:
             server auth-service:8000;
         }
 
+        upstream email_upstream {
+            server email-service:8001;
+        }
+
         upstream settings_upstream {
             server settings-service:8002;
         }
@@ -54,6 +58,16 @@ data:
             # Auth Service API
             location /api/auth/ {
                 proxy_pass http://auth_upstream/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
+
+            # Email Service API
+            location /api/email/ {
+                proxy_pass http://email_upstream/;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
