fix: build transaction service

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,15 +16,18 @@ COPY email-service/Cargo.toml email-service/
 COPY email-service/build.rs email-service/
 COPY settings-service/Cargo.toml settings-service/
 COPY settings-service/build.rs settings-service/
+COPY transaction-service/Cargo.toml transaction-service/
+COPY transaction-service/build.rs transaction-service/
 COPY shared-types shared-types/
 
 COPY proto/ proto/
 
 # Create dummy source files for dependency caching
-RUN mkdir -p auth-service/src email-service/src settings-service/src \
+RUN mkdir -p auth-service/src email-service/src settings-service/src transaction-service/src \
     && echo "fn main() {}" > auth-service/src/main.rs \
     && echo "fn main() {}" > email-service/src/main.rs \
-    && echo "fn main() {}" > settings-service/src/main.rs
+    && echo "fn main() {}" > settings-service/src/main.rs \
+    && echo "fn main() {}" > transaction-service/src/main.rs
 
 # Build dependencies only
 RUN cargo build --release
